--- a/infrasound_display.service
+++ b/infrasound_display.service
@@ -1,8 +1,11 @@
 [Unit]
 Description=Infrasound Display Service
+After=graphical-session.target
 
 [Service]
 Type=simple
+Environment="DISPLAY=:0"
+Environment="XAUTHORITY=/home/pi/.Xauthority"
 WorkingDirectory=/home/pi/repos/STEInfrasound
 ExecStart=/home/pi/repos/STEInfrasound/start_infrasound.sh
 
