--- a/infrasound_display.service
+++ b/infrasound_display.service
@@ -1,13 +1,16 @@
 [Unit]
 Description=Infrasound Display Service
 After=graphical-session.target
+# Add extra delay to ensure X is fully ready
+Wants=graphical-session.target
 
 [Service]
 Type=simple
 Environment="DISPLAY=:0"
 Environment="XAUTHORITY=/home/pi/.Xauthority"
 WorkingDirectory=/home/pi/repos/STEInfrasound
+ExecStartPre=/bin/sleep 5
 ExecStart=/home/pi/repos/STEInfrasound/start_infrasound.sh
 
 [Install]
-WantedBy=default.target
+WantedBy=graphical.target
